// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a chart item in a namespace 1`] = `
<InfoCard
  description={
    <div
      className="ListItem__content__description"
    >
      
    </div>
  }
  icon="icon.png"
  info="1.0.0"
  key="foo1"
  link="/c/default/ns/repo-namespace/charts/repo-name/foo"
  subIcon="helm.svg"
  tag1Class="repo-name"
  tag1Content={
    <ForwardRef
      className="ListItem__content__info_tag_link"
      to="/c/default/ns/repo-namespace/catalog/repo-name"
    >
      repo-name
    </ForwardRef>
  }
  title="foo"
/>
`;

exports[`should render a global chart item in a namespace 1`] = `
<InfoCard
  description={
    <div
      className="ListItem__content__description"
    >
      
    </div>
  }
  icon="icon.png"
  info="1.0.0"
  key="foo1"
  link="/c/default/ns/repo-namespace/global-charts/repo-name/foo"
  subIcon="helm.svg"
  tag1Class="repo-name"
  tag1Content={
    <ForwardRef
      className="ListItem__content__info_tag_link"
      to="/c/default/ns/repo-namespace/catalog/repo-name"
    >
      repo-name
    </ForwardRef>
  }
  title="foo"
/>
`;
